# FIRM-Fractal-Identity-Recursive-Mechanics

./: .coverage  .gitignore  .pre-commit-config.yaml  ADDITIONAL_LOW_HANGING_FRUIT_DISCOVERED.md  ARCHITECTURAL_IMPROVEMENTS_2024.md  BEYOND_THE_MIRROR_NON_ORIENTABLE_SOUL_TOPOLOGIES.md  BULLETPROOFING_ACHIEVEMENTS.md  CODEBASE_CLEANUP_COMPLETE.md  CODEBASE_IMPROVEMENT_ANALYSIS.md  COMPLETE_FSCTF_FIELD_THEORY_ESTABLISHED.md  COMPREHENSIVE_AUDIT_COMPLETE.md  COMPREHENSIVE_CODEBASE_AUDIT_CHECKLIST.md  COMPREHENSIVE_HARDCODED_ELIMINATION_FINAL_REPORT.md  COMPREHENSIVE_PROGRESS_REPORT.md  CONSOLIDATED_REPORTS.md  FIELD_THEORY_ACHIEVEMENTS.md  FIGURE_AUDIT_SOLUTION_PLAN.md  FIGURE_SCRIPT_MAPPING.md  FIGURE_THEORETICAL_PREDICTIONS_RESOLVED.md  FINAL_ACHIEVEMENT_SUMMARY.md  FINAL_GAP_RESOLUTION_SUMMARY.md  FINAL_STATUS_SUMMARY.md  FINAL_UPDATED_GAP_RESOLUTION.md  FIRM_ABANDONMENT_2025-08-14T11:56:00.619729.json  FIRM_ABANDONMENT_2025-08-14T11:59:16.344370.json  FIRM_ABANDONMENT_2025-08-14T11:59:20.467203.json  FIRM_ABANDONMENT_2025-08-14T12:53:46.348276.json  FIRM_ABANDONMENT_2025-08-14T12:54:01.759304.json  FIRM_ABANDONMENT_2025-08-14T12:55:22.238605.json  FIRM_ABANDONMENT_2025-08-14T12:55:25.622151.json  FIRM_ABANDONMENT_2025-08-14T12:56:03.276087.json  FIRM_ABANDONMENT_2025-08-14T12:56:19.585022.json  FIRM_ABANDONMENT_2025-08-14T14:15:36.373506.json  FIRM_ABANDONMENT_2025-08-14T14:29:53.243009.json  FIRM_ABANDONMENT_2025-08-14T14:46:14.944778.json  FIRM_ABANDONMENT_2025-08-14T15:39:32.171133.json  FIRM_ABANDONMENT_2025-08-14T15:51:34.800097.json  FIRM_ABANDONMENT_2025-08-14T15:52:02.892023.json  FIRM_ABANDONMENT_2025-08-14T15:52:03.584404.json  FIRM_ABANDONMENT_2025-08-14T15:52:03.933801.json  (+85 more)
applications/: README.md  __init__.py
archive/: FSCTF_COMPLETE_KNOWLEDGE_DISTILLATION_FINAL.md
arxiv_paper/: README.md
bootstrap/: README.md  __init__.py  first_calculation.py  phi_necessity.py  primordial_distinction.py  void_emergence.py
consciousness/: README.md  __init__.py  eeg_validation.py  phi_harmonic_analysis.py  recursive_identity.py  xi_complexity.py
constants/: README.md  __init__.py  bao_scale_derivation.py  baryon_drag_peak_skew.py  bulletproof_fine_structure_derivation.py  central_physics_constants.py  ckm_matrix.py  ckm_matrix_vus.py  ckm_suppression_factor.py  cmb_envelope_model.py  complete_firm_constants.py  complete_fsctf_constants.py  comprehensive_precision_analysis.py  computational_phi_constants.py  cosmological_constant_derivation.py  curve_fitting_acknowledgments.py  derivation_interface.py  effective_neutrino_species.py  electromagnetic_resonance_theory.py  fine_structure_alpha.py  fine_structure_derivation_chain.py  fundamental_constants_firm.py  fundamental_constants_fsctf.py  gauge_couplings.py  hubble_constant_derivation.py  improved_fine_structure_derivation.py  kelvin_scaling.py  kelvin_scaling_factor.py  kelvin_scaling_thermal.py  mass_ratio_structural_corrections.py  mass_ratios.py  mass_ratios_clean.py  matter_radiation_equality.py  mixing_angles.py  morphic_framework.py  neutrino.py  neutrino_seesaw_derivation.py  optical_depth.py  optical_depth_derivation.py  phi_shells_cooling.py  (+18 more)
cosmology/: README.md  __init__.py  advanced_structure_formation.py  baryogenesis_dynamics.py  baryon_phi.py  cmb_acoustic_peaks_clean.py  cmb_power_spectrum.py  cmb_temperature.py  cosmological_constant.py  cosmological_constant_recursive.py  ex_nihilo_pipeline.py  foundational_cosmogenesis.py  fsctf_lss_signatures_complete.py  inflation_theory.py  inflationary_perturbations.py  phi_background.py  phi_harmonic_anchor.py  phi_k_exponent.py  phi_non_gaussianity.py  phi_observational_signatures.py  recombination_phi.py  recombination_saha_phi.py  reionization_physics.py  structure_formation_physics.py  tensor_perturbations.py  unified_fsctf_cosmology.py
docs/: README.md  __init__.py  article.html  cleanup_plan.md  for_the_skeptics.html  index.html  index.html.bak2  roadmap.html
documentation/: README_Purification.md  purification_comparison_report.md
figures/: COMPREHENSIVE_FIGURE_REQUIREMENTS.md  COMPREHENSIVE_FIXES_SUMMARY.md  FIGURE_CLEANUP_PROGRESS.md  FIGURE_GENERATOR_MAPPING.json  FIGURE_LOCATION_CONFUSION_EXPLAINED.md  FIGURE_ORGANIZATION_PLAN.md  FINAL_FIGURE_SUCCESS_REPORT.md  GENERATION_SESSION_SUCCESS_REPORT.md  HONEST_GENERATION_REPORT.md  MASSIVE_EXPANSION_PLAN.md  MASTER_GENERATOR.py  MISSING_FIGURES_ANALYSIS.md  MISSING_FIGURES_FINAL_ASSESSMENT.md  README.md  README_UPDATED.md  SYSTEMATIC_GENERATION_SUCCESS_REPORT.md  __init__.py  add_manifold_diagram_to_manifest.py  audit_figures.py  cmb_classic_figures.py  cmb_planck_tt_comparison.py  cmb_predictions.py  cmb_skymap.py  comparison_plots.py  consciousness_correlations.py  core_theory_figures.py  critical_review_figures.py  einstein_equations_derivation_figures.py  figure_audit_report.json  figure_generation_summary.md  generator.py  manifold_visualization.py  outputs  particle_masses.py  peer_review_critical_figures.py  phi_emergence.py  provenance_graph.py  regenerate_all_figures_with_theory.py
formal_verification/: theorem_prover_interfaces.py
foundation/: README.md  __init__.py  derived.py  registry.py
provenance/: README.md  __init__.py  contamination_detector.py  derivation_tree.py  guard_api.py  integrity_validator.py  provenance_tracker.py  quarantine_registry.json
reports/: changes_2025-08-12_commits.txt  (+12 more)
(+1091 files in other folders)
