[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "firm-theory"
version = "0.1.0"
description = "Fractal Identity & Recursive Mechanics: Complete Theory of Everything from Pure Mathematics"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "FIRM Research Team", email = "research@firm-theory.org"},
]
maintainers = [
    {name = "FIRM Research Team", email = "research@firm-theory.org"},
]
keywords = [
    "physics", "mathematics", "theory-of-everything", "golden-ratio", 
    "fundamental-constants", "cosmology", "consciousness", "category-theory"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research", 
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Mathematics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0", 
    "sympy>=1.12",
    "matplotlib>=3.6.0",
    "pandas>=1.5.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "notebook>=6.5.0", 
    "ipython>=8.0.0",
    "pre-commit>=3.0.0",
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.2.0",
]
test = [
    "pytest-xdist>=3.0.0",
    "pytest-benchmark>=4.0.0",
    "hypothesis>=6.0.0",
]
validation = [
    "scikit-learn>=1.2.0",
    "astropy>=5.0.0",
    "uncertainties>=3.1.0",
]

[project.urls]
Homepage = "https://github.com/ktynski/FIRM-Fractal-Identity-Recursive-Mechanics"
Documentation = "https://firm-theory.readthedocs.io"
Repository = "https://github.com/ktynski/FIRM-Fractal-Identity-Recursive-Mechanics"
Issues = "https://github.com/ktynski/FIRM-Fractal-Identity-Recursive-Mechanics/issues"
Changelog = "https://github.com/ktynski/FIRM-Fractal-Identity-Recursive-Mechanics/blob/main/CHANGELOG.md"

[project.scripts]
firm-validate = "validation:main"
firm-cosmogenesis = "cosmology.ex_nihilo_pipeline:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["foundation*", "constants*", "structures*", "cosmology*", "validation*", "provenance*", "testing*"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["testing"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--cov=foundation",
    "--cov=constants", 
    "--cov=structures",
    "--cov=cosmology",
    "--cov=validation",
    "--cov=provenance",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=95",
    "--strict-markers",
    "--doctest-modules",
    "--doctest-continue-on-failure",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "mathematical: marks tests as mathematical verification",
    "physical: marks tests as physical derivation verification", 
    "contamination: marks tests as contamination detection",
    "experimental: marks tests requiring experimental data access",
    "property: marks property-based tests",
    "benchmark: marks benchmark/performance tests",
]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
extra_checks = true

[[tool.mypy.overrides]]
module = [
    "numpy.*",
    "scipy.*", 
    "matplotlib.*",
    "pandas.*",
    "sympy.*"
]
ignore_missing_imports = true

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "E501", "W503"]
exclude = [
    ".git",
    "__pycache__", 
    "build",
    "dist",
    ".venv",
    ".eggs",
    "*.egg-info",
]

[tool.coverage.run]
source = ["foundation", "constants", "structures", "cosmology", "validation", "provenance"]
omit = [
    "*/tests/*",
    "*/test_*.py", 
    "*/__pycache__/*",
    "setup.py",
    # Exclude advanced modules still under active development
    "foundation/operators/geometric_algebra.py",
    "foundation/operators/spectral_zeta.py", 
    "foundation/operators/unified_stability_criterion.py",
    "foundation/categories/presheaf_category.py",
    "foundation/categories/fixed_point_category.py",
    "structures/gauge_group_emergence.py",
    # Note: cosmology and provenance modules now have import fixes
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]